# ChangeLog for dev-java/wagon-ftp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Jun 2007; kiorky <kiorky@cryptelium.net> wagon-ftp-1.0.ebuild:
  update depends

  02 Jun 2007; kiorky <kiorky@cryptelium.net> wagon-ftp-1.0.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net> wagon-ftp-1.0.ebuild:
  Adding maven bootstrap flag

  25 Apr 2007; kiorky <kiorky@cryptelium.net> wagon-ftp-1.0.ebuild:
  Migrating to new maven eclass

  24 Apr 2007; kiorky <kiorky@cryptelium.net> -wagon-ftp-1.0_alpha4.ebuild,
  +wagon-ftp-1.0.ebuild, +metadata.xml:
  added  to the java-experimental overlay as a maven dependency.see #175827

  18 Apr 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Added as a maven dependency
