@@ -1,4 +1,4 @@
 DIST wagon-ftp-1.0.tar.bz2 10341 RMD160 ae0d172112ac51168054f851e1dca67ec9260a6c SHA1 ee917865e694cd42343687800939151cd0d95713 SHA256 fc2280e19635cd5f3d66ad1ee50ca4bbaac42448febcfd6153294a8d42c376f7
-EBUILD wagon-ftp-1.0.ebuild 843 RMD160 4c3b29d6ff4eda258e37228b263148d53d760b3c SHA1 1021c8b1f5c9b3aac564e837f28b5a7ab07abd29 SHA256 d4f6e4cbb71a8cecfb4fbb3d76c7c793408b4fad9d7907c4e7b95a666cc43924
-MISC ChangeLog 788 RMD160 ba27726228830e39dadd37cf5c93316c1ebf7711 SHA1 1391a9b4b4b32515389e3c178dc42bf1aaec9b53 SHA256 328fea1e9dde8b3d524731b9a982b6cbd17cf458de21bb77fa2d30130669a6ba
+EBUILD wagon-ftp-1.0.ebuild 852 RMD160 182f984984b35d7b4d50b0013cd48362f8d109f9 SHA1 c7e5c7cd83fda1160b7c914627a10bed14dc422e SHA256 65a08ee6803d0a37ceb434e9674b3312fd38df5608a9ab19eed036f9ff8234df
+MISC ChangeLog 898 RMD160 cc93cb66412e9e3dfbfda6d4ada2b67a7cb78fcf SHA1 205cc0733cb48efc6a6d1ebb97f55ffe262f94a5 SHA256 45ee887e99dfbc070adb9f82389aaf549fe9c9d026467fe506c1db49fb50e7c5
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
